[tool.poetry]
name = "pubmed-analyzer-adityaSinha"
version = "0.1.0"
description = "Tool to analyze PubMed papers focusing on industry-affiliated authors"
authors = ["9503adityas@gmail.com"]
readme = "README.md"
packages = [
    { include = "pubmed_analyzer", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
requests = "^2.31.0"
click = "^8.1.7"
pandas = "^2.2.0"
tqdm = "^4.66.1"
typing-extensions = "^4.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.12.0"
isort = "^5.13.0"
mypy = "^1.8.0"

[tool.poetry.scripts]
get-papers-list = "pubmed_analyzer.cli:main"